<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>jp.sourceforge.ea2ddl</groupId>
	<artifactId>ea2ddl-parent</artifactId>
	<version>0.0.3-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Enterprise Architect to DDL</name>
	<description>Enterprise Architect to DDL</description>
	<url>http://ea2ddl.sourceforge.jp/</url>
	<inceptionYear>2008</inceptionYear>
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<scm>
		<connection>scm:git:git://git.sourceforge.jp/gitroot/ea2ddl/ea2ddl.git</connection>
		<developerConnection>scm:git:git://git.sourceforge.jp/gitroot/ea2ddl/ea2ddl.git</developerConnection>
		<url>http://git.sourceforge.jp/view?p=ea2ddl/ea2ddl.git</url>
	</scm>
	<modules>
		<module>ea2ddl-common</module>
		<module>ea2ddl-dao</module>
		<module>ea2ddl-comment</module>
		<module>ea2ddl-ddl</module>
		<module>ea2ddl-dist</module>
	</modules>
	<repositories>
		<repository>
			<id>maven.seasar.org</id>
			<name>The Seasar Foundation Maven2 Repository</name>
			<url>http://maven.seasar.org/maven2</url>
		</repository>
	</repositories>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<encoding>UTF-8</encoding>
						<source>1.5</source>
						<target>1.5</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<executions>
						<execution>
							<phase>package</phase>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<artifactId>maven-javadoc-plugin</artifactId>
					<executions>
						<execution>
							<phase>package</phase>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<source>1.5</source>
						<encoding>UTF-8</encoding>
						<docencoding>UTF-8</docencoding>
						<charset>UTF-8</charset>
						<locales>ja</locales>
						<aggregate>true</aggregate>
						<additionalJOption>-J-Xmx512m</additionalJOption>
						<links>
							<link>http://java.sun.com/j2se/1.5.0/ja/docs/ja/api/</link>
							<link>http://java.sun.com/j2ee/1.4/docs/api/</link>
							<link>http://aopalliance.sourceforge.net/doc/</link>
						</links>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<configuration>
						<forkMode>once</forkMode>
						<argLine>
							-Xmx512m -XX:PermSize=128m -XX:MaxPermSize=256m
						</argLine>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<properties>
		<s2.version>2.4.30</s2.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit-addons</groupId>
			<artifactId>junit-addons</artifactId>
			<version>1.4</version>
			<type>jar</type>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>junit-addons</groupId>
					<artifactId>junit-addons-runner</artifactId>
				</exclusion>
				<exclusion>
					<groupId>xerces</groupId>
					<artifactId>xercesImpl</artifactId>
				</exclusion>
				<exclusion>
					<groupId>xerces</groupId>
					<artifactId>xmlParserAPIs</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.14</version>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.1</version>
			<exclusions>
				<exclusion>
					<artifactId>avalon-framework</artifactId>
					<groupId>avalon-framework</groupId>
				</exclusion>
				<exclusion>
					<artifactId>logkit</artifactId>
					<groupId>logkit</groupId>
				</exclusion>
				<exclusion>
					<artifactId>log4j</artifactId>
					<groupId>log4j</groupId>
				</exclusion>
				<exclusion>
					<artifactId>servlet-api</artifactId>
					<groupId>javax.servlet</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.3</version>
		</dependency>
		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>3.2</version>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.seasar.container</groupId>
				<artifactId>s2-extension</artifactId>
				<version>${s2.version}</version>
				<type>jar</type>
				<exclusions>
					<exclusion>
						<artifactId>poi</artifactId>
						<groupId>poi</groupId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.seasar.container</groupId>
				<artifactId>s2-tiger</artifactId>
				<version>${s2.version}</version>
				<type>jar</type>
				<exclusions>
					<exclusion>
						<artifactId>poi</artifactId>
						<groupId>poi</groupId>
					</exclusion>
				</exclusions>
			</dependency>

			<dependency>
				<groupId>org.apache.geronimo.specs</groupId>
				<artifactId>geronimo-j2ee_1.4_spec</artifactId>
				<version>1.0</version>
				<type>jar</type>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.geronimo.specs</groupId>
				<artifactId>geronimo-ejb_3.0_spec</artifactId>
				<version>1.0</version>
				<type>jar</type>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.geronimo.specs</groupId>
				<artifactId>geronimo-jpa_3.0_spec</artifactId>
				<version>1.0</version>
				<type>jar</type>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.geronimo.specs</groupId>
				<artifactId>geronimo-jta_1.1_spec</artifactId>
				<version>1.0</version>
				<type>jar</type>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi</artifactId>
				<version>3.0.2-FINAL</version>
			</dependency>
			<dependency>
				<groupId>org.seasar.dbflute</groupId>
				<artifactId>dbflute</artifactId>
				<version>0.8.1</version>
			</dependency>
			<dependency>
				<groupId>org.apache.ant</groupId>
				<artifactId>ant</artifactId>
				<version>1.7.1</version>
			</dependency>
			<dependency>
				<groupId>org.freemarker</groupId>
				<artifactId>freemarker</artifactId>
				<version>2.3.13</version>
			</dependency>
			<dependency>
				<groupId>org.seasar.dbflute</groupId>
				<artifactId>dbflute-runtime</artifactId>
				<version>0.9.3</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

</project>
